sample/error/module_prohibited-import.bfr
// web playgroundでは禁止
open import "../lib/std.bfr"

codegen []